2011-11-10  Pavel Feldman  <pfeldman@google.com>

        Web Inspector: do not highlight files larger than 10KLOC.
        https://bugs.webkit.org/show_bug.cgi?id=72025

        This is a temporary measure while I am improving the highlighter
        footprint. Otherwise, highlighting pretty printed Gmail takes ~1.3G of RAM.

        Reviewed by Yury Semikhatsky.

        * inspector/front-end/TextEditorHighlighter.js:
        (WebInspector.TextEditorHighlighter.prototype.highlight):
        (WebInspector.TextEditorHighlighter.prototype.updateHighlight):
        * inspector/front-end/UISourceCode.js:
        (WebInspector.UISourceCode.prototype._didRequestContent):

2011-11-10  Alpha Lam  <hclam@chromium.org>

        [chromium] Scroll deltas are cleared during commit to the main thread
        https://bugs.webkit.org/show_bug.cgi?id=71916

        Reviewed by James Robinson.

        The patch keeps the scroll deltas and scroll position unchanged when
        committing to the main thread. After commit has completed on the main
        thread the submitted scroll deltas are then subtracted from the current
        scroll deltas on the impl thread.

        Doing so allow scroll deltas to be available at all time which enables
        proper positioning for layers that are fixed-positioned to the
        container layer.

        This patch is tested by the following unit tests:
        - CCLayerTreeHostImplTest.scrollDeltaRepeatedScrolls
          This test is modified to verify that scroll deltas and scroll position
          are unchanged during commit. And then after commit scroll deltas are
          subtracted correctly.

        - CCLayerTreeHostTestScrollSimple.runMultiThread and
          CCLayerTreeHostTestScrollMultipleRedraw.runMultiThread
          These tests verifies that scroll deltas made on impl thread are
          committed to the main thread. The scroll deltas is eventually delegated